# LLM-Benchmark-Studio

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_CN.md  TODO.list.txt  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt
backend/: README.md  manage.py
backend/apps/api/: router.py
backend/apps/benchmarking/: apps.py  models.py  services.py  tasks.py
backend/apps/core/: admin_bootstrap.py  logging.py  schemas.py
backend/config/: celery.py  urls.py
backend/system_profiler/: __init__.py  api.py  cpu.py  disk.py  gpu.py  history.py  memory.py  network.py  process.py  snapshot.py  system_info.py
backend/tests/: test_admin_bootstrap.py  test_api.py  test_benchmarking.py  test_catalog.py  test_logging.py  test_ollama.py  test_providers.py  test_system_profiler_unittest.py  test_task_ordering.py
data/: download_default_datasets.py  languages.json  llm_model_names.json  parse_all_datasets.py  parser_json_rules.json
docs/: mermaid-flows-cn.md  mermaid-flows.md
docs/prds/: api-design.md  celery-prd.md  django-prd.md  json-format.md  postgresql-prd.md  rabbitmq-prd.md  vue-prd.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  version.ts
frontend/tests/: taskOrdering.test.ts
local-transformers-openai-api/: README.md  README_CN.md  check_environment.py  model_registry.example.json  openai_api_server.py  requirements.txt  transformers_model.py
overall_test/: task_queue_overall.test.ts
(+32 files in other folders)
