[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchmark-studio"
version = "0.1.0"
description = "Local-first LLM benchmark studio with Django, Vue, PostgreSQL, RabbitMQ, and Celery."
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "django-ninja>=1.1,<2.0",
  "django-cors-headers>=4.3,<5.0",
  "django-environ>=0.11,<1.0",
  "psutil>=6.0,<7.0",
  "psycopg[binary]>=3.1,<4.0",
  "requests>=2.31,<3.0",
  "celery>=5.3,<6.0",
  "django-celery-results>=2.5,<3.0",
  "datasets>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-django>=4.8,<5.0",
  "ruff>=0.6,<1.0",
]
local-transformers-api = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "transformers>=4.45,<5.0",
  "accelerate>=0.34,<1.0",
  "peft>=0.13,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["backend/tests"]
addopts = "-q"
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
